# resolva

./: .gitignore  LICENSE  README.md  package.py  pyproject.toml
.github/workflows/: publish_pypi.yml
docs/: api.rst  conf.py  index.rst  overview.md  requirements.txt  usage.md
resolva/: __init__.py  resolver.py  template.py  utils.py
resolva_tests/: data.py  pattern.py  test_all_format.py  test_format.py  test_resolve.py  test_type.py
resolva_tests/experiments/: reg_experiments.py  regexp2.py  regexp3.py  test_optionals.py  test_optionals_2.py
resolva_tests/ressources/: hamlet.sids.txt  test.sids.txt
revolver/: __init__.py  formatter.py  resolver.py  template.py  utils.py
revolver_tests/: data.py  pattern.py  run.py  test_format.py  test_formatter.py  test_resolve.py  test_resolver.py
revolver_tests/ressources/: hamlet.sids.txt  test.sids.txt
